[package]
name = "temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state-manager = { git = "https://github.com/ThomasAqu1nas/state-manager.git/", brach = "main" }
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = { version = "0.2.18", features = ["libm", "i128"] }
rand = "0.8.5"
